--- a/Submit-Score/game-submit.html
+++ b/Submit-Score/game-submit.html
@@ -4,37 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <title>Score Submission</title>
   </head>
   <body>
-    <nav class="HP-navigation">
-      <ul class="HP-items">
-        <li>
-          <img class="nav-img" src="HP-images/FIFA.png" alt="EA Sports FIFA" />
-        </li>
-        <button>
-          <a class="button_top EAS" href="Submit-Score/game-submit.html"
-            >Enter a Score</a
-          >
-        </button>
-        <button>
-          <a class="button_top S2HP" href="Season-2-Driver/S2-index.html"
-            >Season 2 Home Page</a
-          >
-        </button>
-        <button>
-          <a class="button_top S1HP" href="Season-1-Driver/S1-index.html"
-            >Season 1 Home Page</a
-          >
-        </button>
-        <button>
-          <a class="button_top PB" href="Player-Bios/player-bios-index.html"
-            >Player Biographies</a
-          >
-        </button>
-      </ul>
-    </nav>
     <form
+      class="score-form"
       id="1v1-Log"
       action="https://api.sheetmonkey.io/form/kdDC36Jfn5CVfY8jEmp3cK"
     >
@@ -52,8 +34,6 @@
             <option value="">Gabe</option>
           </optgroup>
         </select>
-      </div>
-      <div>
         <select name="Away-Player">
           <optgroup>
             <option value="">Alejandro</option>
@@ -121,8 +101,6 @@
             <option value="">Wales</option>
           </optgroup>
         </select>
-      </div>
-      <div>
         <select name="Away-Team">
           <optgroup>
             <option value="">Argentina</option>
@@ -179,27 +157,24 @@
       <div>
         <label>Home Goals:</label>
         <input name="Home-Goals" type="number" min="0" max="15" />
-      </div>
-      <div>
         <label>Away Goals:</label>
         <input name="Away-Goals" type="number" min="0" max="15" />
       </div>
+
       <div>
         <label>Home Shots:</label>
         <input name="Home-Shots" type="number" min="0" max="50" />
-      </div>
-      <div>
         <label>Away Shots:</label>
         <input name="Away-Shots" type="number" min="0" max="50" />
       </div>
+
       <div>
         <label>Home SOGs:</label>
         <input name="Home-SOGs" type="number" min="0" max="40" />
-      </div>
-      <div>
         <label>Away SOGs:</label>
         <input name="Away-SOGs" type="number" min="0" max="40" />
       </div>
+
       <div>
         <label>Home Posession %</label>
         <input name="Home-Poss" type="number" min="1" max="99" />
@@ -207,35 +182,33 @@
       <div>
         <label>Home Tackles:</label>
         <input name="Home-Tackles" type="number" min="0" max="40" />
-      </div>
-      <div>
+
         <label>Away Tackles:</label>
         <input name="Away-Tackles" type="number" min="0" max="40" />
       </div>
       <div>
         <label>Home Fouls:</label>
         <input name="Home-Fouls" type="number" min="0" max="40" />
-      </div>
-      <div>
+
         <label>Away Fouls:</label>
         <input name="Away-Fouls" type="number" min="0" max="40" />
       </div>
       <div>
         <label>Home Yellow-Cards:</label>
         <input name="Home-Yellow-Cards" type="number" min="0" max="40" />
-      </div>
-      <div>
+
         <label>Away Yellow-Cards:</label>
         <input name="Away-Yellow-Cards" type="number" min="0" max="40" />
       </div>
+
       <div>
         <label>Home Red-Cards:</label>
         <input name="Home-Red-Cards" type="number" min="0" max="40" />
-      </div>
-      <div>
+
         <label>Away Red-Cards:</label>
         <input name="Away-Red-Cards" type="number" min="0" max="40" />
       </div>
+
       <button type="submit" id="submit-form">Submit Game</button>
       <button type="reset">Clear</button>
     </form>
