nav bar on home page

--- a/index.html
+++ b/index.html
@@ -182,6 +182,20 @@
     }
   </style>
   <body>
+    <nav class="nav collapsible">
+      <a class="nav__brand" href="/"
+        ><img class="nav__image" src="HP-images/FIFA16.png" alt=""
+      /></a>
+      <svg class="icon icon--white nav__toggler">
+        <use xlink:href="HP-images/sprite.svg#menu"></use>
+      </svg>
+      <ul class="list nav__list collapsible__content">
+        <li class="nav__item"><a href="#">Hosting</a></li>
+        <li class="nav__item"><a href="#">VPS</a></li>
+        <li class="nav__item"><a href="#">Domain</a></li>
+        <li class="nav__item"><a href="#">Pricing</a></li>
+      </ul>
+    </nav>
     <div class="links-container">
       <div class="box box-1"></div>
       <div class="box box-2">
@@ -252,5 +266,6 @@
         <h4></h4>
       </footer>
     </div>
+    <script src="js/main.js"></script>
   </body>
 </html>
