naviagation bar submission page

--- a/index.html
+++ b/index.html
@@ -183,17 +183,26 @@
   </style>
   <body>
     <nav class="nav collapsible">
-      <a class="nav__brand" href="/"
-        ><img class="nav__image" src="HP-images/FIFA16.png" alt=""
+      <a href="index.html"
+        ><img class="nav__image" src="HP-images/FIFA.png" alt=""
       /></a>
       <svg class="icon icon--white nav__toggler">
         <use xlink:href="HP-images/sprite.svg#menu"></use>
       </svg>
       <ul class="list nav__list collapsible__content">
-        <li class="nav__item"><a href="#">Hosting</a></li>
-        <li class="nav__item"><a href="#">VPS</a></li>
-        <li class="nav__item"><a href="#">Domain</a></li>
-        <li class="nav__item"><a href="#">Pricing</a></li>
+        <li class="nav__item">
+          <a href="Season-2-Driver/S2-index.html">Season 2 Stats & Info</a>
+        </li>
+        <li class="nav__item">
+          <a href="Player-Bios/player-bios-index.html">Player Biographies</a>
+        </li>
+        <li class="nav__item">
+          <a href="Season-1-Driver/S1-index.html">Season 1 Stats & Info</a>
+        </li>
+        <li class="nav__item">
+          <a href="Tournaments/tournaments-index.html">Tournaments</a>
+        </li>
+        <li class="nav__item"><a href="Extras/extras-index.html">Extras</a></li>
       </ul>
     </nav>
     <div class="links-container">
