--- a/Submit-Score/submit-success.html
+++ b/Submit-Score/submit-success.html
@@ -12,7 +12,7 @@
     />
     <link rel="stylesheet" href="../css/normalize.css" />
     <link rel="stylesheet" href="../css/styles.css" />
-    <title>Document</title>
+    <title>Game Upload Success!</title>
   </head>
   <style>
     button {
