hero on front page

--- a/Submit-Score/game-submit.html
+++ b/Submit-Score/game-submit.html
@@ -19,7 +19,7 @@
   <body class="score-submit-body">
     <nav class="nav collapsible">
       <a href="../index.html"
-        ><img class="nav__image" src="../HP-images/FIFA.png" alt=""
+        ><img class="nav__image" src="../HP-images/FIFA16.png" alt=""
       /></a>
       <svg class="icon icon--white nav__toggler">
         <use xlink:href="../HP-images/sprite.svg#menu"></use>
