--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
       border-radius: 0.5em;
       background: #e8e8e8;
       border: 1px solid #e8e8e8;
-      box-shadow: 6px 6px 12px #c5c5c5, -6px -6px 12px #ffffff;
+      box-shadow: 1px 1px 12px #c5c5c5, -1px -1px 12px #ffffff;
     }
 
     .button2:active {
       color: #666;
-      box-shadow: inset 4px 4px 12px #c5c5c5, inset -4px -4px 12px #ffffff;
+      box-shadow: inset 41px 4px 12px #c5c5c5, inset -4px -4px 12px #ffffff;
     }
 
     .button2:before {
@@ -205,6 +205,23 @@
         <li class="nav__item"><a href="Extras/extras-index.html">Extras</a></li>
       </ul>
     </nav>
+    <section class="block block--dark block--skewed-left hero">
+      <div class="container grid grid--1x2">
+        <header class="block__header hero__content">
+          <h1 class="block__heading">402 FIFA League:</h1>
+          <h1 class="block__heading">Season 2</h1>
+          <p class="hero__tagline">INSERT LEAGUE MOTTO</p>
+          <button class="button2">
+            <a class="links" href="Submit-Score/game-submit.html">Submit →</a>
+          </button>
+        </header>
+        <img
+          class="hero__image"
+          src="HP-images/402 FIFA LEAGUE (700 × 700 px).png"
+          alt=""
+        />
+      </div>
+    </section>
     <div class="links-container">
       <div class="box box-1"></div>
       <div class="box box-2">
