blocks, embed form

--- a/Submit-Score/game-submit.html
+++ b/Submit-Score/game-submit.html
@@ -43,340 +43,16 @@
       </ul>
     </nav>
     <script src="../js/main.js"></script>
-
     <header class="submission-header">SUBMIT A SCORE</header>
-    <form
-      class="score-form"
-      id="1v1-Log"
-      action="https://api.sheetmonkey.io/form/kdDC36Jfn5CVfY8jEmp3cK"
+    <iframe
+      src="https://docs.google.com/forms/d/e/1FAIpQLSeTC7PkXn1_jOsXpDVjqO_C6Oiyh4F8mFYQ2ZQxgPcynMG7MA/viewform?embedded=true"
+      width="100%"
+      height="3545"
+      frameborder="0"
+      marginheight="0"
+      marginwidth="0"
+      >Loading…</iframe
     >
-      <span class="submission-container-dd grid-item-left">
-        <label class="submission-label">Home Player:</label>
-        <select class="submission-dd" name="Home-Player">
-          <option value="" disabled selected>Select a Player...</option>
-          <option value="">Alejandro</option>
-          <option value="">Joe</option>
-          <option value="">Michael</option>
-          <option value="">Charlie</option>
-          <option value="">J.T.</option>
-          <option value="">John</option>
-          <option value="">Jake</option>
-          <option value="">Karsin</option>
-          <option value="">Gabe</option>
-        </select>
-      </span>
-      <span class="submission-container-dd grid-item-right">
-        <label class="submission-label">Away Player:</label>
-        <select class="submission-dd" name="Away-Player">
-          <option value="" disabled selected>Select a Player...</option>
-          <option value="">Alejandro</option>
-          <option value="">Joe</option>
-          <option value="">Michael</option>
-          <option value="">Charlie</option>
-          <option value="">J.T.</option>
-          <option value="">John</option>
-          <option value="">Jake</option>
-          <option value="">Karsin</option>
-          <option value="">Gabe</option>
-        </select>
-      </span>
-
-      <span class="submission-container-dd grid-item-left">
-        <label class="submission-label">Home Team:</label>
-        <select class="submission-dd" name="Home-Team">
-          <option value="" disabled selected>Select a Team...</option>
-          <option value="">Argentina</option>
-          <option value="">Australia</option>
-          <option value="">Austria</option>
-          <option value="">Belgium</option>
-          <option value="">Bolivia</option>
-          <option value="">Brazil</option>
-          <option value="">Bulgaria</option>
-          <option value="">Cameroon</option>
-          <option value="">Canada</option>
-          <option value="">Chile</option>
-          <option value="">China PR</option>
-          <option value="">Colombia</option>
-          <option value="">Côte d'Ivoire</option>
-          <option value="">Czech Republic</option>
-          <option value="">Denmark</option>
-          <option value="">Ecuador</option>
-          <option value="">Egypt</option>
-          <option value="">England</option>
-          <option value="">Finland</option>
-          <option value="">France</option>
-          <option value="">Germany</option>
-          <option value="">Greece</option>
-          <option value="">Hungary</option>
-          <option value="">India</option>
-          <option value="">Ireland</option>
-          <option value="">Italy</option>
-          <option value="">Mexico</option>
-          <option value="">Netherlands</option>
-          <option value="">New Zealand</option>
-          <option value="">Northern Ireland</option>
-          <option value="">Norway</option>
-          <option value="">Paraguay</option>
-          <option value="">Peru</option>
-          <option value="">Poland</option>
-          <option value="">Portugal</option>
-          <option value="">Romania</option>
-          <option value="">Russia</option>
-          <option value="">Scotland</option>
-          <option value="">Slovenia</option>
-          <option value="">South Africa</option>
-          <option value="">Spain</option>
-          <option value="">Sweden</option>
-          <option value="">Switzerland</option>
-          <option value="">Turkey</option>
-          <option value="">United States</option>
-          <option value="">Uruguay</option>
-          <option value="">Venezuela</option>
-          <option value="">Wales</option>
-        </select>
-      </span>
-      <span class="submission-container-dd grid-item-right">
-        <label class="submission-label">Away Team:</label>
-        <select class="submission-dd" name="Away-Team">
-          <option value="" disabled selected>Select a Team...</option>
-          <option value="">Argentina</option>
-          <option value="">Australia</option>
-          <option value="">Austria</option>
-          <option value="">Belgium</option>
-          <option value="">Bolivia</option>
-          <option value="">Brazil</option>
-          <option value="">Bulgaria</option>
-          <option value="">Cameroon</option>
-          <option value="">Canada</option>
-          <option value="">Chile</option>
-          <option value="">China PR</option>
-          <option value="">Colombia</option>
-          <option value="">Côte d'Ivoire</option>
-          <option value="">Czech Republic</option>
-          <option value="">Denmark</option>
-          <option value="">Ecuador</option>
-          <option value="">Egypt</option>
-          <option value="">England</option>
-          <option value="">Finland</option>
-          <option value="">France</option>
-          <option value="">Germany</option>
-          <option value="">Greece</option>
-          <option value="">Hungary</option>
-          <option value="">India</option>
-          <option value="">Ireland</option>
-          <option value="">Italy</option>
-          <option value="">Mexico</option>
-          <option value="">Netherlands</option>
-          <option value="">New Zealand</option>
-          <option value="">Northern Ireland</option>
-          <option value="">Norway</option>
-          <option value="">Paraguay</option>
-          <option value="">Peru</option>
-          <option value="">Poland</option>
-          <option value="">Portugal</option>
-          <option value="">Romania</option>
-          <option value="">Russia</option>
-          <option value="">Scotland</option>
-          <option value="">Slovenia</option>
-          <option value="">South Africa</option>
-          <option value="">Spain</option>
-          <option value="">Sweden</option>
-          <option value="">Switzerland</option>
-          <option value="">Turkey</option>
-          <option value="">United States</option>
-          <option value="">Uruguay</option>
-          <option value="">Venezuela</option>
-          <option value="">Wales</option>
-        </select>
-      </span>
-
-      <span class="submission-container grid-item-left">
-        <label class="submission-label">Home Goals:</label>
-        <input
-          class="num-input"
-          name="Home-Goals"
-          type="number"
-          min="0"
-          max="15"
-        />
-      </span>
-      <span class="submission-container grid-item-right">
-        <label class="submission-label">Away Goals:</label>
-        <input
-          class="num-input"
-          name="Away-Goals"
-          type="number"
-          min="0"
-          max="15"
-        />
-      </span>
-
-      <span class="submission-container grid-item-left">
-        <label class="submission-label">Home Shots:</label>
-        <input
-          class="num-input"
-          name="Home-Shots"
-          type="number"
-          min="0"
-          max="50"
-        />
-      </span>
-      <span class="submission-container grid-item-right">
-        <label class="submission-label">Away Shots:</label>
-        <input
-          class="num-input"
-          name="Away-Shots"
-          type="number"
-          min="0"
-          max="50"
-        />
-      </span>
-
-      <span class="submission-container grid-item-left">
-        <label class="submission-label">Home SOGs:</label>
-        <input
-          class="num-input"
-          name="Home-SOGs"
-          type="number"
-          min="0"
-          max="40"
-        />
-      </span>
-      <span class="submission-container grid-item-right">
-        <label class="submission-label">Away SOGs:</label>
-        <input
-          class="num-input"
-          name="Away-SOGs"
-          type="number"
-          min="0"
-          max="40"
-        />
-      </span>
-
-      <span class="submission-container grid-item-left">
-        <label for="homePoss" class="submission-label">Home Possession %</label>
-        <input
-          class="num-input"
-          name="homePoss"
-          type="number"
-          id="home-poss"
-          min="1"
-          max="99"
-          value="50"
-          onchange="updateSecondInput()"
-        />
-      </span>
-      <span class="submission-container grid-item-right">
-        <label for="awayPoss" class="submission-label">Away Possession %</label>
-        <input
-          class="num-input"
-          name="awayPoss"
-          type="number"
-          id="away-poss"
-          value="50"
-          min="1"
-          max="99"
-        />
-      </span>
-
-      <span class="submission-container grid-item-left">
-        <label class="submission-label">Home Tackles:</label>
-        <input
-          class="num-input"
-          name="Home-Tackles"
-          type="number"
-          min="0"
-          max="40"
-        />
-      </span>
-
-      <span class="submission-container grid-item-right">
-        <label class="submission-label">Away Tackles:</label>
-        <input
-          class="num-input"
-          name="Away-Tackles"
-          type="number"
-          min="0"
-          max="40"
-        />
-      </span>
-
-      <span class="submission-container grid-item-left">
-        <label class="submission-label">Home Fouls:</label>
-        <input
-          class="num-input"
-          name="Home-Fouls"
-          type="number"
-          min="0"
-          max="40"
-        />
-      </span>
-
-      <span class="submission-container grid-item-right">
-        <label class="submission-label">Away Fouls:</label>
-        <input
-          class="num-input"
-          name="Away-Fouls"
-          type="number"
-          min="0"
-          max="40"
-        />
-      </span>
-
-      <span class="submission-container grid-item-left">
-        <label class="submission-label">Home Yellow Cards:</label>
-        <input
-          class="num-input"
-          name="Home-Yellow-Cards"
-          type="number"
-          min="0"
-          max="40"
-        />
-      </span>
-
-      <span class="submission-container grid-item-right">
-        <label class="submission-label">Away Yellow Cards:</label>
-        <input
-          class="num-input"
-          name="Away-Yellow-Cards"
-          type="number"
-          min="0"
-          max="40"
-        />
-      </span>
-
-      <span class="submission-container grid-item-left">
-        <label class="submission-label">Home Red Cards:</label>
-        <input
-          class="num-input"
-          name="Home-Red-Cards"
-          type="number"
-          min="0"
-          max="5"
-          value="0"
-        />
-      </span>
-
-      <span class="submission-container grid-item-right">
-        <label class="submission-label">Away Red Cards:</label>
-        <input
-          class="num-input"
-          name="Away-Red-Cards"
-          type="number"
-          min="0"
-          max="5"
-          value="0"
-        />
-      </span>
-      <span class="button--submit"
-        ><button class="button--score" type="submit" id="submit-form">
-          Submit Game
-        </button>
-      </span>
-      <span class="button--clear"
-        ><button class="button--score" type="reset">Clear</button></span
-      >
-    </form>
   </body>
   <script>
     function updateSecondInput() {
