--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
       background: #e8e8e8;
       border: 1px solid #e8e8e8;
       box-shadow: 1px 1px 12px #c5c5c5, -1px -1px 12px #ffffff;
+      margin: 0 auto;
+      display: block;
     }
 
     .button2:active {
@@ -226,101 +228,132 @@
     </section>
     <section class="block container block-plans">
       <div class="grid grid--1x3">
-        <div class="plan plan--popular">
+        <div class="plan">
           <div class="card card--secondary">
             <header class="card__header">
-              <h3 class="plan__name">Entry</h3>
-              <span class="plan__price">$14</span>
-              <span class="plan__billing-cycle">/month</span>
-              <span class="badge badge--secondary badge--small">10% OFF</span>
-              <span class="plan__description">East start on the cloud</span>
+              <p>insert a canva image here for each</p>
             </header>
             <div class="card__body">
-              <ul class="list list--tick">
-                <li class="list__item">Unlimited Websites</li>
-                <li class="list__item">Unlimited Bandwidth</li>
-                <li class="list__item">100 GB SSD Sotrage</li>
-                <li class="list__item">3 GB RAM</li>
-              </ul>
-              <button class="btn btn--outline btn--block">Buy Now</button>
+              <p class="card__text">
+                Explore the league's premier soccer tournaments, where legends
+                are made and dreams become reality. Uncover the riveting
+                narratives and legendary matches that define these unparalleled
+                showcases of skill and passion.
+              </p>
+              <br />
+              <button class="button2">
+                <a class="links" href="Submit-Score/game-submit.html"
+                  >Tournaments →</a
+                >
+              </button>
             </div>
           </div>
         </div>
-        <div class="plan plan--popular">
+        <div class="plan">
           <div class="card card--secondary">
             <header class="card__header">
-              <h3 class="plan__name">Entry</h3>
-              <span class="plan__price">$14</span>
-              <span class="plan__billing-cycle">/month</span>
-              <span class="badge badge--secondary badge--small">10% OFF</span>
-              <span class="plan__description">East start on the cloud</span>
+              <p>insert a canva image here for each</p>
             </header>
             <div class="card__body">
-              <ul class="list list--tick">
-                <li class="list__item">Unlimited Websites</li>
-                <li class="list__item">Unlimited Bandwidth</li>
-                <li class="list__item">100 GB SSD Sotrage</li>
-                <li class="list__item">3 GB RAM</li>
-              </ul>
-              <button class="btn btn--outline btn--block">Buy Now</button>
+              <p class="card__text">
+                Delve into the captivating lives and remarkable journeys of the
+                league's greatest icons. From their humble beginnings to their
+                crowning achievements, discover the inspiring stories behind the
+                players.
+              </p>
+              <br />
+              <button class="button2">
+                <a class="links" href="Submit-Score/game-submit.html"
+                  >Player Biographies →</a
+                >
+              </button>
             </div>
           </div>
         </div>
-        <div class="plan plan--popular">
+        <div class="plan">
           <div class="card card--secondary">
             <header class="card__header">
-              <h3 class="plan__name">Entry</h3>
-              <span class="plan__price">$14</span>
-              <span class="plan__billing-cycle">/month</span>
-              <span class="badge badge--secondary badge--small">10% OFF</span>
-              <span class="plan__description">East start on the cloud</span>
+              <p>insert a canva image here for each</p>
             </header>
             <div class="card__body">
-              <ul class="list list--tick">
-                <li class="list__item">Unlimited Websites</li>
-                <li class="list__item">Unlimited Bandwidth</li>
-                <li class="list__item">100 GB SSD Sotrage</li>
-                <li class="list__item">3 GB RAM</li>
-              </ul>
-              <button class="btn btn--outline btn--block">Buy Now</button>
+              <p class="card__text">
+                From behind-the-scenes footage to in-depth analysis, delve
+                deeper into the captivating world of leagues and immerse
+                yourself in the rich tapestry of stories that surround the game
+                you love.
+              </p>
+              <br />
+              <button class="button2">
+                <a class="links" href="Submit-Score/game-submit.html"
+                  >Extras →</a
+                >
+              </button>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <div class="links-container">
-      <div class="box box-1"></div>
-      <div class="box box-2">
-        <p class="score-text">Click Here to Submit a Score:</p>
-        <button class="button2">
-          <a class="links" href="Submit-Score/game-submit.html">Submit →</a>
-        </button>
-      </div>
-      <div class="box box-3">
-        <p class="score-text">Season 2 Info:</p>
-        <button class="button2">
-          <a class="links" href="Season-2-Driver/S2-index.html">Visit →</a>
-        </button>
-      </div>
-      <div class="box box-4">
-        <p class="score-text">Player Bios:</p>
-        <button class="button2">
-          <a class="links" href="Player-Bios/player-bios-index.html">Visit →</a>
-        </button>
-      </div>
-      <div class="box box-5">
-        <p class="score-text">Season 1 Info:</p>
-        <button class="button2">
-          <a class="links" href="Season-1-Driver/S1-index.html">Visit →</a>
-        </button>
-      </div>
-      <div class="box box-6">
-        <p class="score-text">Extras:</p>
-        <button class="button2">
-          <a class="links" href="Extras/extras-index.html">Visit →</a>
-        </button>
-      </div>
-    </div>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="seasons-header">Unforgettable Seasons</h2>
+        <p class="seasons-text">
+          Relive the defining moments of each Season in 402 FIFA football, where
+          legends were made and history was written.
+        </p>
+      </header>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <span class="icon-container">
+            <svg class="icon icon--primary">
+              <use xlink:href="images/sprite.svg#easy"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">Super Easy to Use</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
+            obcaecati vel ad unde est illo at. Labore excepturi officia dolores!
+          </p>
+          <a href="#" class="link-arrow">Learn More</a>
+        </div>
+        <picture>
+          <source
+            type="image/webp"
+            srcset="images/easy.webp 1x, images/easy@2x.webp 2x"
+          />
+          <source
+            type="image/jpg"
+            srcset="images/easy.jpg 1x, images/easy@2x.jpg 2x"
+          />
+          <img class="feature__image" src="images/easy@2x.jpg" alt="" />
+        </picture>
+      </article>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <span class="icon-container">
+            <svg class="icon icon--primary">
+              <use xlink:href="images/sprite.svg#computer"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">Simply Fast Websites</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
+            obcaecati vel ad unde est illo at. Labore excepturi officia dolores!
+          </p>
+          <a href="#" class="link-arrow">Learn More</a>
+        </div>
+        <picture>
+          <source
+            type="image/webp"
+            srcset="images/fast.webp 1x, images/fast@2x.webp 2x"
+          />
+          <source
+            type="image/jpg"
+            srcset="images/fast.jpg 1x, images/fast@2x.jpg 2x"
+          />
+          <img class="feature__image" src="images/fast@2x.jpg" alt="" />
+        </picture>
+      </article>
+    </section>
     <div class="hp-footer">
       <footer>
         <h3>Website Created by Alejandro Borrego:</h3>
