--- a/Season-2-Driver/S2-index.html
+++ b/Season-2-Driver/S2-index.html
@@ -4,35 +4,44 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="../css/normalize.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../css/normalize.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
+    <title>Tournaments</title>
   </head>
   <body>
-    <nav class="HP-navigation">
-      <ul class="HP-items">
-        <li>
-          <img class="nav-img" src="HP-images/FIFA.png" alt="EA Sports FIFA" />
+    <nav class="nav collapsible">
+      <a href="../index.html"
+        ><img class="nav__image" src="../HP-images/FIFA16.png" alt=""
+      /></a>
+      <svg class="icon icon--white nav__toggler">
+        <use xlink:href="../HP-images/sprite.svg#menu"></use>
+      </svg>
+      <ul class="list nav__list collapsible__content">
+        <li class="nav__item">
+          <a href="../index.html">Home</a>
         </li>
-        <button>
-          <a class="button_top EAS" href="Submit-Score/game-submit.html"
-            >Enter a Score</a
-          >
-        </button>
-        <button>
-          <a class="button_top S2HP" href="Season-2-Driver/S2-index.html"
-            >Season 2 Home Page</a
-          >
-        </button>
-        <button>
-          <a class="button_top S1HP" href="Season-1-Driver/S1-index.html"
-            >Season 1 Home Page</a
-          >
-        </button>
-        <button>
-          <a class="button_top PB" href="Player-Bios/player-bios-index.html"
-            >Player Biographies</a
-          >
-        </button>
+        <li class="nav__item">
+          <a href="../Player-Bios/player-bios-index.html">Player Biographies</a>
+        </li>
+        <li class="nav__item">
+          <a href="../Season-1-Driver/S1-index.html">Season 1 Stats & Info</a>
+        </li>
+        <li class="nav__item">
+          <a href="../Tournaments/tournaments-index.html">Tournaments</a>
+        </li>
+        <li class="nav__item">
+          <a href="../Extras/extras-index.html">Extras</a>
+        </li>
       </ul>
     </nav>
+    <script src="../js/main.js"></script>
   </body>
 </html>
