--- a/index.html
+++ b/index.html
@@ -15,13 +15,6 @@
     />
   </head>
   <style>
-    body {
-      width: 100%;
-      height: auto;
-      background-color: #4caf50;
-      background-image: url("data:image/svg+xml,%3Csvg width='40' height='40' viewBox='0 0 40 40' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%2300563f' fill-opacity='0.29' fill-rule='evenodd'%3E%3Cpath d='M0 40L40 0H20L0 20M40 40V20L20 40'/%3E%3C/g%3E%3C/svg%3E");
-    }
-
     .box {
       width: auto;
       height: auto;
@@ -242,7 +235,7 @@
               </p>
               <br />
               <button class="button2">
-                <a class="links" href="Submit-Score/game-submit.html"
+                <a class="links" href="Tournaments/tournaments-index.html"
                   >Tournaments →</a
                 >
               </button>
@@ -263,7 +256,7 @@
               </p>
               <br />
               <button class="button2">
-                <a class="links" href="Submit-Score/game-submit.html"
+                <a class="links" href="Player-Bios/player-bios-index.html"
                   >Player Biographies →</a
                 >
               </button>
@@ -284,9 +277,7 @@
               </p>
               <br />
               <button class="button2">
-                <a class="links" href="Submit-Score/game-submit.html"
-                  >Extras →</a
-                >
+                <a class="links" href="Extras/extras-index.html">Extras →</a>
               </button>
             </div>
           </div>
