--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <div class="plan">
           <div class="card card--secondary">
             <header class="card__header">
-              <p>insert a canva image here for each</p>
+              <img src="HP-images/tournaments.webp" alt="" />
             </header>
             <div class="card__body">
               <p class="card__text">
@@ -245,7 +245,7 @@
         <div class="plan">
           <div class="card card--secondary">
             <header class="card__header">
-              <p>insert a canva image here for each</p>
+              <img src="HP-images/player-bios.webp" alt="" />
             </header>
             <div class="card__body">
               <p class="card__text">
@@ -266,7 +266,7 @@
         <div class="plan">
           <div class="card card--secondary">
             <header class="card__header">
-              <p>insert a canva image here for each</p>
+              <img src="HP-images/extras.webp" alt="" />
             </header>
             <div class="card__body">
               <p class="card__text">
@@ -294,54 +294,45 @@
       </header>
       <article class="grid grid--1x2 feature">
         <div class="feature__content">
-          <span class="icon-container">
-            <svg class="icon icon--primary">
-              <use xlink:href="images/sprite.svg#easy"></use>
-            </svg>
-          </span>
-          <h3 class="feature__heading">Super Easy to Use</h3>
+          <h3 class="feature__heading">Season 2: Building Legacies</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
-            obcaecati vel ad unde est illo at. Labore excepturi officia dolores!
+            New talents emerge and established teams lay the foundation for a
+            future defined by greatness and enduring accomplishments
           </p>
-          <a href="#" class="link-arrow">Learn More</a>
+          <button class="button2">
+            <a class="links" href="Season-2-Driver/S2-index.html"
+              >Learn More →</a
+            >
+          </button>
         </div>
         <picture>
-          <source
-            type="image/webp"
-            srcset="images/easy.webp 1x, images/easy@2x.webp 2x"
+          <img
+            class="feature__image"
+            src="HP-images/s2-intro.png"
+            alt="Season 2 intro"
           />
-          <source
-            type="image/jpg"
-            srcset="images/easy.jpg 1x, images/easy@2x.jpg 2x"
-          />
-          <img class="feature__image" src="images/easy@2x.jpg" alt="" />
         </picture>
       </article>
       <article class="grid grid--1x2 feature">
         <div class="feature__content">
-          <span class="icon-container">
-            <svg class="icon icon--primary">
-              <use xlink:href="images/sprite.svg#computer"></use>
-            </svg>
-          </span>
-          <h3 class="feature__heading">Simply Fast Websites</h3>
+          <h3 class="feature__heading">Season 1: Humble Beginnings</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
-            obcaecati vel ad unde est illo at. Labore excepturi officia dolores!
+            Explore the birth of the league, from the first games, to the World
+            Cup. Gain insight into the league developments, and off-season
+            content.
           </p>
-          <a href="#" class="link-arrow">Learn More</a>
+          <button class="button2">
+            <a class="links" href="Season-1-Driver/S1-index.html"
+              >Learn More →</a
+            >
+          </button>
         </div>
         <picture>
-          <source
-            type="image/webp"
-            srcset="images/fast.webp 1x, images/fast@2x.webp 2x"
+          <img
+            class="feature__image"
+            src="HP-images/S1 League Intro.png"
+            alt=""
           />
-          <source
-            type="image/jpg"
-            srcset="images/fast.jpg 1x, images/fast@2x.jpg 2x"
-          />
-          <img class="feature__image" src="images/fast@2x.jpg" alt="" />
         </picture>
       </article>
     </section>
