--- a/Tournaments/tournaments-index.html
+++ b/Tournaments/tournaments-index.html
@@ -43,5 +43,111 @@
       </ul>
     </nav>
     <script src="../js/main.js"></script>
+    <div class="header_video_container">
+      <video
+        autoplay
+        loop
+        muted
+        class="header_video"
+        src="tournaments-media/tournaments-header.mp4"
+      ></video>
+    </div>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="seasons-header seasons-header-tournametns">World Cup</h2>
+        <p class="seasons-text">
+          Where nations unite, showcasing the pinnacle of soccer excellence in a
+          global spectacle of passion and competition.
+        </p>
+      </header>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <h3 class="feature__heading">1st Annual: Rick's 11</h3>
+          <p>
+            Relive the best moments from the league's first and finest
+            tournament.
+          </p>
+          <p>Winner: Alejandro</p>
+          <p>Runner-Up: Gabe</p>
+          <button class="button2">
+            <a class="links" href="Season-2-Driver/S2-index.html"
+              >Learn More →</a
+            >
+          </button>
+        </div>
+        <picture>
+          <img
+            class="feature__image"
+            src="HP-images/s2-intro.png"
+            alt="put in a photo of the bracket here"
+          />
+        </picture>
+      </article>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <h3 class="feature__heading">2nd Annual: 932 Greenwood</h3>
+          <p>The World Cup returns with a new locaiton, players, and teams.</p>
+          <p>Coming December 2023.</p>
+          <button class="button2">
+            <a class="links" href="Season-1-Driver/S1-index.html"
+              >Learn More →</a
+            >
+          </button>
+        </div>
+        <picture>
+          <img
+            class="feature__image"
+            src="HP-images/S1 League Intro.png"
+            alt=""
+          />
+        </picture>
+      </article>
+    </section>
+    <section class="block block--dark block-showcase">
+      <header class="tournament-header block__header">
+        <h2>Other Tournaments</h2>
+      </header>
+      <div class="container grid grid--1x2">
+        <picture class="block-showcase__image">
+          <img src="tournaments-media/others.webp" alt="" />
+        </picture>
+        <ul class="list">
+          <li>
+            <div class="media">
+              <div class="media__body">
+                <h3 class="media__title">Chicago Invitational</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Veniam quisquam, ex nostrum vero voluptates dicta excepturi
+                  vel perspiciatis consequuntur ab.
+                </p>
+                <button class="button2 btn-left">
+                  <a class="links" href="Season-2-Driver/S2-index.html"
+                    >Learn More →</a
+                  >
+                </button>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="media">
+              <div class="media__body">
+                <h3 class="media__title">Red Bull Cup</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Veniam quisquam, ex nostrum vero voluptates dicta excepturi
+                  vel perspiciatis consequuntur ab.
+                </p>
+                <button class="btn-left button2">
+                  <a class="links" href="Season-2-Driver/S2-index.html"
+                    >Learn More →</a
+                  >
+                </button>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
   </body>
 </html>
