--- a/index.html
+++ b/index.html
@@ -61,79 +61,6 @@
       font-weight: 900;
       margin: 30px 10px;
     }
-
-    .button2 {
-      display: inline-block;
-      transition: all 0.2s ease-in;
-      position: relative;
-      overflow: hidden;
-      z-index: 1;
-      color: #090909;
-      padding: 0.7em 1.7em;
-      font-size: 18px;
-      border-radius: 0.5em;
-      background: #e8e8e8;
-      border: 1px solid #e8e8e8;
-      box-shadow: 1px 1px 12px #c5c5c5, -1px -1px 12px #ffffff;
-      margin: 0 auto;
-      display: block;
-    }
-
-    .button2:active {
-      color: #666;
-      box-shadow: inset 41px 4px 12px #c5c5c5, inset -4px -4px 12px #ffffff;
-    }
-
-    .button2:before {
-      content: "";
-      position: absolute;
-      left: 50%;
-      transform: translateX(-50%) scaleY(1) scaleX(1.25);
-      top: 100%;
-      width: 140%;
-      height: 180%;
-      background-color: rgba(0, 0, 0, 0.05);
-      border-radius: 50%;
-      display: block;
-      transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
-      z-index: -1;
-    }
-
-    .button2:after {
-      content: "";
-      position: absolute;
-      left: 55%;
-      transform: translateX(-50%) scaleY(1) scaleX(1.45);
-      top: 180%;
-      width: 160%;
-      height: 190%;
-      background-color: #048324;
-      border-radius: 50%;
-      display: block;
-      transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
-      z-index: -1;
-    }
-
-    .button2:hover {
-      color: #ffffff;
-      border: 1px solid #048324;
-    }
-
-    .button2:hover:before {
-      top: -35%;
-      background-color: #048324;
-      transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
-    }
-
-    .button2:hover:after {
-      top: -45%;
-      background-color: #048324;
-      transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
-    }
-    .links {
-      text-decoration: none;
-      color: black;
-    }
     footer {
       color: white;
       height: auto; /*change for desktop*/
@@ -206,7 +133,7 @@
           <h1 class="block__heading">402 FIFA League:</h1>
           <h1 class="block__heading">Season 2</h1>
           <p class="hero__tagline">This is Football Heritage.</p>
-          <button class="button2">
+          <button class="btn-left-intro button2">
             <a class="links" href="Submit-Score/game-submit.html"
               >Submit a Score →</a
             >
@@ -300,9 +227,7 @@
             future defined by greatness and enduring accomplishments
           </p>
           <button class="button2">
-            <a class="links" href="Season-2-Driver/S2-index.html"
-              >Learn More →</a
-            >
+            <a class="links" href="Season-2-Driver/S2-index.html">Season 2 →</a>
           </button>
         </div>
         <picture>
@@ -322,9 +247,7 @@
             content.
           </p>
           <button class="button2">
-            <a class="links" href="Season-1-Driver/S1-index.html"
-              >Learn More →</a
-            >
+            <a class="links" href="Season-1-Driver/S1-index.html">Season 1 →</a>
           </button>
         </div>
         <picture>
