Player Bios, pre page

--- a/Player-Bios/player-bios-index.html
+++ b/Player-Bios/player-bios-index.html
@@ -43,5 +43,126 @@
       </ul>
     </nav>
     <script src="../js/main.js"></script>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="seasons-header">League Members</h2>
+        <p class="seasons-text">
+          Delve into the captivating lives and remarkable journeys of the
+          league's greatest icons. From their humble beginnings to their
+          crowning achievements, discover the inspiring stories behind the
+          players.
+        </p>
+      </header>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <h3 class="feature__heading">Alejandro</h3>
+          <p>League Comissioner</p>
+          <p>Current World Cup Champion</p>
+          <p>Flair Shot Enthusiast (LT + B)</p>
+        </div>
+        <picture>
+          <img class="feature__image" src="" alt="Alej Photo" />
+        </picture>
+      </article>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <h3 class="feature__heading">Michael</h3>
+          <p>Vice Comissioner</p>
+          <p>Best Young Player: Season 1 World Cup</p>
+          <p>Lukaku Fanboy</p>
+        </div>
+        <picture>
+          <img class="feature__image" src="" alt="Mike Image" />
+        </picture>
+      </article>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <h3 class="feature__heading">Joe</h3>
+          <p>Vice Comissioner & Co-Technology Director</p>
+          <p>Golden Glove Award: Season 1 World Cup</p>
+          <p>Dirty Ass</p>
+        </div>
+        <picture>
+          <img class="feature__image" src="" alt="Joe Photo" />
+        </picture>
+      </article>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <h3 class="feature__heading">John</h3>
+          <p>Tournament Director</p>
+          <p>New League Member</p>
+          <p>INSERT SOMETHING</p>
+        </div>
+        <picture>
+          <img class="feature__image" src="" alt="John Image" />
+        </picture>
+      </article>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <h3 class="feature__heading">Charlie</h3>
+          <p>Insert something</p>
+          <p>New League Member</p>
+          <p>Lost 15 Followers after posting about the league</p>
+        </div>
+        <picture>
+          <img class="feature__image" src="" alt="Charlie Photo" />
+        </picture>
+      </article>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <h3 class="feature__heading">Karsin</h3>
+          <p>Referee & Governance Director</p>
+          <p>Golden Boot Award: Season 1 World Cup</p>
+          <p>Fine Ass</p>
+        </div>
+        <picture>
+          <img class="feature__image" src="" alt="Karsin Image" />
+        </picture>
+      </article>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <h3 class="feature__heading">Gabe</h3>
+          <p>AP Pre-Season Poll #1: Michigan League</p>
+          <p>Golden Ball Award: Season 1 World Cup</p>
+          <p>Probably will never see this website</p>
+        </div>
+        <picture>
+          <img class="feature__image" src="" alt="gabe Photo" />
+        </picture>
+      </article>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <h3 class="feature__heading">J.T.</h3>
+          <p>INSERT SOMETHING</p>
+          <p>AP Poll's Most Likely to be Good if he cared award</p>
+          <p>Refuses to Play because he doesn't want to learn the controls</p>
+        </div>
+        <picture>
+          <img class="feature__image" src="" alt="jt Image" />
+        </picture>
+      </article>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <h3 class="feature__heading">Jake</h3>
+          <p>INSERT SOMETHING</p>
+          <p>INSERT SOMETHING</p>
+          <p>INSERT SOMETHING</p>
+        </div>
+        <picture>
+          <img class="feature__image" src="" alt="Jake Photo" />
+        </picture>
+      </article>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <h3 class="feature__heading">Grand Flank</h3>
+          <p>International Correspondants</p>
+          <p>Offical Commentators for the World Cup</p>
+          <p>FIFA 23 Enthusiasts</p>
+        </div>
+        <picture>
+          <img class="feature__image" src="" alt="grand flank Image" />
+        </picture>
+      </article>
+    </section>
   </body>
 </html>
